<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.ozolirih.myapplication.MainActivity"
    tools:ignore="MissingConstraints,RtlHardcoded,LabelFor,HardcodedText">


    <TextView
        android:id="@+id/jumtsSegumDemont"
        android:layout_width="160dp"
        android:layout_height="40dp"
        android:text="@string/jumtssegumdemont"
        android:textColor="@android:color/black"
        tools:layout_editor_absoluteX="10dp"
        tools:layout_editor_absoluteY="50dp" />

    <TextView
        android:id="@+id/jumtsTextView2"
        android:layout_width="160dp"
        android:layout_height="40dp"
        android:text="@string/jumtskarkdemont"
        android:textColor="@android:color/black"
        tools:layout_editor_absoluteX="10dp"
        tools:layout_editor_absoluteY="90dp" />

    <TextView
        android:id="@+id/sijasTextView"
        android:layout_width="160dp"
        android:layout_height="40dp"
        android:gravity="bottom"
        android:text="@string/karkasamontza"
        android:textColor="@android:color/black"
        tools:layout_editor_absoluteX="10dp"
        tools:layout_editor_absoluteY="130dp" />

    <TextView
        android:id="@+id/sijasText2View"
        android:layout_width="160dp"
        android:layout_height="40dp"
        android:gravity="bottom"
        android:text="pleveunlaktas"
        android:textColor="@android:color/black"
        tools:layout_editor_absoluteX="10dp"
        tools:layout_editor_absoluteY="170dp" />

    <EditText
        android:id="@+id/njumtsSegumDemontNumb"
        android:layout_width="54dp"
        android:layout_height="40dp"
        android:inputType="numberDecimal"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        tools:ignore="LabelFor"
        tools:layout_editor_absoluteX="169dp"
        tools:layout_editor_absoluteY="50dp" />

    <EditText
        android:id="@+id/jumtsNumb"
        android:layout_width="54dp"
        android:layout_height="40dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        android:visibility="visible"
        tools:ignore="RtlHardcoded"
        tools:layout_editor_absoluteX="169dp"
        tools:layout_editor_absoluteY="90dp" />

    <EditText
        android:id="@+id/karkasNumb"
        android:layout_width="54dp"
        android:layout_height="40dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        android:visibility="visible"
        tools:ignore="MissingConstraints,RtlHardcoded"
        tools:layout_editor_absoluteX="169dp"
        tools:layout_editor_absoluteY="130dp" />

    <EditText
        android:id="@+id/plevelaktaNumb"
        android:layout_width="54dp"
        android:layout_height="40dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        android:visibility="visible"
        tools:ignore="MissingConstraints,RtlHardcoded"
        tools:layout_editor_absoluteX="169dp"
        tools:layout_editor_absoluteY="170dp" />

    <TextView
        android:id="@+id/summaNumb"
        android:layout_width="155dp"
        android:layout_height="60dp"
        android:text="0"
        android:textAlignment="viewEnd"
        android:textColor="@android:color/black"
        android:textSize="36sp"
        android:textStyle="bold"
        tools:ignore="HardcodedText,MissingConstraints"
        tools:layout_editor_absoluteX="213dp"
        tools:layout_editor_absoluteY="419dp" />

    <Button
        android:id="@+id/calcBtn"
        android:layout_width="105dp"
        android:layout_height="60dp"
        android:text="Calc"
        tools:layout_editor_absoluteX="290dp"
        tools:layout_editor_absoluteY="502dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="95dp"
        android:layout_height="20dp"
        android:text="Darbs"
        android:textColor="@android:color/holo_red_dark"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="16dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:text="@string/cena_par_vienibu"
        android:textColor="@android:color/black"
        tools:layout_editor_absoluteX="223dp"
        tools:layout_editor_absoluteY="16dp" />

    <TextView
        android:id="@+id/jumtasegumademontcena"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_2_eur_m2"
        android:textColor="@android:color/black"
        tools:layout_editor_absoluteX="240dp"
        tools:layout_editor_absoluteY="50dp" />

    <TextView
        android:id="@+id/jumtsOnetextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_5_eur_m2"
        android:textColor="@android:color/black"
        tools:layout_editor_absoluteX="240dp"
        tools:layout_editor_absoluteY="90dp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kop"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="358dp"
        tools:layout_editor_absoluteY="16dp" />

    <TextView
        android:id="@+id/notekasSumtextView"
        android:layout_width="50dp"
        android:layout_height="20dp"
        android:text="0"
        android:textAlignment="viewEnd"
        android:textColor="@android:color/black"
        tools:layout_editor_absoluteX="322dp"
        tools:layout_editor_absoluteY="50dp" />

    <TextView
        android:id="@+id/jumtsSumtextView"
        android:layout_width="50dp"
        android:layout_height="20dp"
        android:text="0"
        android:textAlignment="viewEnd"
        android:textColor="@android:color/black"
        tools:layout_editor_absoluteX="322dp"
        tools:layout_editor_absoluteY="90dp" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="105dp"
        android:layout_height="28dp"
        android:text="TOTAL"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="263dp"
        tools:layout_editor_absoluteY="391dp" />

    <Button
        android:id="@+id/sendButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Button"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="405dp" />

    <GridLayout
        android:id="@+id/newGrid"
        android:layout_width="match_parent"
        android:layout_height="76dp"
        android:columnCount="5"
        android:rowCount="4"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="306dp">
        <!-- Grid Header -->


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_gravity="center"
            android:text="@string/cellNo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_gravity="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_gravity="center"
            android:text="@string/voltage" />

    </GridLayout>

</android.support.constraint.ConstraintLayout>
